fix spacing

--- a/src/components/devices/Devices.sass
+++ b/src/components/devices/Devices.sass
@@ -12,6 +12,7 @@
   display: inline-flex
   justify-content: center
   align-items: center
+  color: $white
 
   .label
     display: inline-block
@@ -24,8 +25,8 @@
       font-size: 4rem
 
   .devices-anchor
-    width: 300px
-    height: 300px
+    width: 400px
+    height: 400px
     position: absolute
     animation: rotate 4s linear infinite
 
@@ -34,5 +35,5 @@
       width: 50px
       height: 50px
       border-radius: 25px
-      background-color: black
+      background-color: $white
       position: absolute
