--- a/src/screens/devices/DevicesScreen.sass
+++ b/src/screens/devices/DevicesScreen.sass
@@ -1,4 +1,7 @@
+@use 'styles/_variables' as *
+
 .devices-screen-root
   display: flex
   justify-content: center
   align-items: center
+  background-color: $orange
